完成新增http服务、修改http服务接口
